[gd_scene load_steps=6 format=3 uid="uid://cpwboy1etry5w"]

[ext_resource type="Script" uid="uid://bao1wsgryavl2" path="res://Scenes/TitleScreen/title_screen.gd" id="1_n15yj"]
[ext_resource type="Texture2D" uid="uid://j2ojep27oces" path="res://Words/title.png" id="1_uebgo"]
[ext_resource type="Texture2D" uid="uid://dd0yuk3tcjtyr" path="res://Words/exitgame.png" id="2_8l4an"]
[ext_resource type="Texture2D" uid="uid://dpb3nkljbxs8q" path="res://Words/playgame.png" id="2_vmg2h"]
[ext_resource type="AudioStream" uid="uid://c3l2td3edugvp" path="res://Audio/symphony5moderato.mp3" id="5_emot1"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n15yj")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0784314, 0.0470588, 0.109804, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.0
offset_top = -159.0
offset_right = 184.0
offset_bottom = 159.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Title" type="TextureRect" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 6.0
texture = ExtResource("1_uebgo")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="MenuOptions" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
size_flags_stretch_ratio = 4.0
theme_override_constants/separation = 10

[node name="NewGame" type="Button" parent="MarginContainer/VBoxContainer2/MenuOptions"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
icon = ExtResource("2_vmg2h")
flat = true

[node name="ExitGame" type="Button" parent="MarginContainer/VBoxContainer2/MenuOptions"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
icon = ExtResource("2_8l4an")
flat = true

[node name="TitleMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_emot1")
autoplay = true
